// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.TableBatchActions should render 1`] = `
<TableBatchActions
  className="custom-class"
  onCancel={[MockFunction]}
  shouldShowBatchActions={false}
  totalSelected={10}
  translateWithId={[Function]}
>
  <div
    aria-hidden={true}
    className="bx--batch-actions custom-class"
  >
    <div
      className="bx--batch-summary"
    >
      <p
        className="bx--batch-summary__para"
      >
        <span>
          10 items selected
        </span>
      </p>
    </div>
    <TableActionList>
      <div
        className="bx--action-list"
      >
        <Button
          className="bx--batch-summary__cancel"
          dangerDescription="danger"
          disabled={false}
          isExpressive={false}
          kind="primary"
          onClick={[MockFunction]}
          size="default"
          tabIndex={-1}
          tooltipAlignment="center"
          tooltipPosition="top"
          type="button"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="bx--batch-summary__cancel bx--btn bx--btn--primary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={-1}
            type="button"
          >
            Cancel
          </button>
        </Button>
      </div>
    </TableActionList>
  </div>
</TableBatchActions>
`;

exports[`DataTable.TableBatchActions should render 2`] = `
<TableBatchActions
  className="custom-class"
  onCancel={[MockFunction]}
  shouldShowBatchActions={true}
  totalSelected={10}
  translateWithId={[Function]}
>
  <div
    aria-hidden={false}
    className="bx--batch-actions bx--batch-actions--active custom-class"
  >
    <div
      className="bx--batch-summary"
    >
      <p
        className="bx--batch-summary__para"
      >
        <span>
          10 items selected
        </span>
      </p>
    </div>
    <TableActionList>
      <div
        className="bx--action-list"
      >
        <Button
          className="bx--batch-summary__cancel"
          dangerDescription="danger"
          disabled={false}
          isExpressive={false}
          kind="primary"
          onClick={[MockFunction]}
          size="default"
          tabIndex={0}
          tooltipAlignment="center"
          tooltipPosition="top"
          type="button"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="bx--batch-summary__cancel bx--btn bx--btn--primary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
        </Button>
      </div>
    </TableActionList>
  </div>
</TableBatchActions>
`;
